@@ -1,5 +1,11 @@
 -- Release 1.0.0 --
 
+2004-12-28  Stefan Petersen  <spe@siouxsie.umunet.org>
+
+	* src/draw.c: When drawing circles I ignored if circle
+	  had inner diameter, which was pointed out by Harry Eaton. 
+	  Not anymore... Closes bug #1050340 in this branch.
+
 2004-10-30  Stefan Petersen  <spe@siouxsie.umunet.org>
 
 	* src/draw_amacro.c: Forgot to use local_gc when drawing some
